--- a/src/app/components/not-shared/currency-item-details/related-item/related-item.component.html
+++ b/src/app/components/not-shared/currency-item-details/related-item/related-item.component.html
@@ -1,4 +1,4 @@
-<div [routerLink]="['/', item?.slugText]" class="w-full flex-1 px-3 md:px-0 md:pt-1 pb-2 md:pl-2 flex hover:cursor-pointer md:hover:bg-light-text3 md:rounded-lg md:hover:dark:bg-dark-text {{index !== 4 ? 'border-b border-light-border2 dark:border-dark-border2 md:border-b-0' : ''}}">
+<div [routerLink]="['/', item?.slugText]" class="w-full flex-1 px-3 md:px-0 md:pt-1 pb-2 md:pl-2 flex items-center hover:cursor-pointer md:hover:bg-light-text3 md:rounded-lg md:hover:dark:bg-dark-text {{index !== 4 ? 'border-b border-light-border2 dark:border-dark-border2 md:border-b-0' : ''}}">
     <div class="flex flex-1 flex-col">
         <div class="flex w-full items-center justify-between flex-1">
             @if (item?.faGroupName === 'بازارهای ارزی') {
