--- a/src/app/components/not-shared/currency-item-details/related-item/related-item.component.html
+++ b/src/app/components/not-shared/currency-item-details/related-item/related-item.component.html
@@ -1,6 +1,6 @@
-<div [routerLink]="['/', item?.slugText]" class="w-full flex-1 px-3 md:px-0 md:pt-1 pb-2 md:pl-2 flex items-center hover:cursor-pointer md:hover:bg-light-text3 md:rounded-lg md:hover:dark:bg-dark-text {{index !== 4 ? 'border-b border-light-border2 dark:border-dark-border2 md:border-b-0' : ''}}">
+<div [routerLink]="['/', item?.slugText]" class="w-full flex-wrap justify-center flex-1 px-3 lg:px-0 lg:pt-1 pb-2 lg:pl-2 flex items-center hover:cursor-pointer lg:hover:bg-light-text3 lg:rounded-lg lg:hover:dark:bg-dark-text {{index !== 4 ? 'border-b border-light-border2 dark:border-dark-border2 lg:border-b-0' : ''}}">
     <div class="flex flex-1 flex-col">
-        <div class="flex w-full items-center justify-between flex-1">
+        <div class="flex w-full items-center justify-between flex-wrap">
             @if (item?.faGroupName === 'بازارهای ارزی') {
                 <p class="font-normal text-sm leading-[180%] {{(item?.lastPriceInfo?.dt === 'low') ? 'text-light-red-text dark:text-dark-red-text' : 'text-light-green-text dark:text-dark-green-text'}}">{{(item?.lastPriceInfo?.dt === 'low') ? '-' : '+'}}{{item?.lastPriceInfo?.dp}}%</p>
             }
@@ -12,9 +12,9 @@
                     <p class="font-normal text-sm leading-[180%] {{(item?.dollarChangeState === 'low') ? 'text-light-red-text dark:text-dark-red-text' : 'text-light-green-text dark:text-dark-green-text'}}">{{(item?.dollarChangeState === 'low') ? '-' : '+'}}{{item?.dollarChanges}}%</p>
                 }
             }
-            <p class="line-clamp-2 flex-1 text-ellipsis text-dark dark:text-white text-right rtl text-xs font-medium leading-[180%]">{{item?.title}}</p>
+            <p class="line-clamp-1 text-ellipsis text-dark dark:text-white text-right rtl text-xs font-medium leading-[180%]">{{item?.title}}</p>
         </div>
-        <div class="flex w-full items-center justify-between flex-1">
+        <div class="flex w-full items-center justify-between flex-wrap">
 
             <div class="flex gap-1 text-xs">
                 <p class="text-dark dark:text-white text-xs font-normal leading-[180%] {{ item?.faGroupName === 'بازارهای ارزی' ? 'hidden' : 'block' }}">{{currentUnit() === 0 ? 'تومان' : 'دلار'}}</p>
