--- a/src/app/pages/currency-item-details/currency-item-details.component.html
+++ b/src/app/pages/currency-item-details/currency-item-details.component.html
@@ -1,5 +1,5 @@
-<main class="w-full min-h-screen bg-theme-white dark:bg-theme-black flex px-4 pt-20 pb-6 md:px-18 md:pb-8 md:pt-24 lg:pt-29 lg:px-41 lg:pb-16 flex-col md:flex-row-reverse flex-nowrap justify-between items-start">
-    <div class="w-full md:w-[69%] flex flex-col flex-nowrap justify-end items-end content-center">
+<main class="w-full min-h-screen bg-theme-white dark:bg-theme-black flex px-4 pt-20 pb-6 lg:px-18 lg:pb-8 lg:pt-24 lg:flex-row-reverse xl:pt-29 xl:px-41 xl:pb-16 flex-col flex-nowrap justify-between items-start">
+    <div class="w-full lg:w-[69%] flex flex-col flex-nowrap justify-end items-end content-center">
         <app-breadcrumb [items]="breadCrumbItems" />
         <div class="w-full flex justify-between items-center gap-2">
             <button (click)="sharePage()" class="flex justify-center items-center text-xs md:text-sm transition text-dark-text dark:text-light-text duration-300 ease-out gap-2 h-12 hover:cursor-pointer rounded-semi px-2 border-transparent bg-neutral-50 dark:bg-neutral-700 border hover:border-light-text2 hover:dark:border-dark-text2">
@@ -36,24 +36,24 @@
             </div>
         </div>
         <app-item-info class="w-full" [item]="currencyItem" />
-        <div class="w-full flex justify-end flex-col xs:flex-row xs:justify-between items-center xs:mb-7 flex-wrap">
-            <div class="flex flex-col xs:flex-row items-end w-full xs:w-auto mb-2 xs:mb-0">
-                <div class="flex xs:flex-col flex-row justify-between xs:justify-start w-full xs:w-auto mb-2 xs:mb-0">
+        <div class="w-full flex justify-end flex-col md:flex-row md:justify-between items-center md:mb-7">
+            <div class="flex flex-col md:flex-row items-end w-full md:w-auto mb-2 md:mb-0">
+                <div class="flex md:flex-col flex-row justify-between md:justify-start w-full md:w-auto mb-2 md:mb-0">
                     <p class="text-right text-xs font-normal text-dark-text4 dark:text-light-text4 leading-[180%]">کمترین {{ currencyItem?.faGroupName === 'بازارهای ارزی' ? 'نسبت' : 'قیمت' }}</p>
-                    <p class="text-xs font-normal text-dark-text4 dark:text-light-text4 leading-[180%] block xs:hidden">بیشترین {{ currencyItem?.faGroupName === 'بازارهای ارزی' ? 'نسبت' : 'قیمت' }}</p>
-                    <div class="items-center gap-1.25 hidden xs:flex">
+                    <p class="text-xs font-normal text-dark-text4 dark:text-light-text4 leading-[180%] block md:hidden">بیشترین {{ currencyItem?.faGroupName === 'بازارهای ارزی' ? 'نسبت' : 'قیمت' }}</p>
+                    <div class="items-center gap-1.25 hidden md:flex">
                         <p class="text-2xs font-normal text-dark-text4 dark:text-light-text4 leading-[180%] {{ currencyItem?.faGroupName === 'بازارهای ارزی' ? 'hidden' : 'flex' }}">{{ currentSupportCurrencyId() === 0 ? 'تومان' : 'دلار' }}</p>
                         <p class="dark:text-white text-dark text-sm md:text-xs lg:text-sm font-normal leading-[180%]">{{ currentMinPrice() }}</p>
                     </div>
                 </div>
-                <div class="w-full xs:w-50 h-2 xs:mx-2 rounded-2xl bg-light-border2 dark:bg-dark-border2 mb-2">
+                <div class="w-full md:w-50 h-2 md:mx-2 rounded-2xl bg-light-border2 dark:bg-dark-border2 mb-2">
                     <div [style.width]="currentPercentMinMax()" class="h-full flex justify-start bg-light-text2 dark:bg-dark-text2 rounded-2xl">
                         
                     </div>
                 </div>
-                <div class="flex xs:flex-col flex-row justify-between xs:justify-start w-full xs:w-auto mb-2 xs:mb-0">
-                    <p class="text-xs font-normal text-dark-text4 dark:text-light-text4 leading-[180%] hidden xs:block">بیشترین {{ currencyItem?.faGroupName === 'بازارهای ارزی' ? 'نسبت' : 'قیمت' }}</p>
-                    <div class="items-center gap-1.25 flex xs:hidden">
+                <div class="flex md:flex-col flex-row justify-between md:justify-start w-full md:w-auto mb-2 md:mb-0">
+                    <p class="text-xs font-normal text-dark-text4 dark:text-light-text4 leading-[180%] hidden md:block">بیشترین {{ currencyItem?.faGroupName === 'بازارهای ارزی' ? 'نسبت' : 'قیمت' }}</p>
+                    <div class="items-center gap-1.25 flex md:hidden">
                         <p class="text-2xs font-normal text-dark-text4 dark:text-light-text4 leading-[180%] {{ currencyItem?.faGroupName === 'بازارهای ارزی' ? 'hidden' : 'flex' }}">{{ currentSupportCurrencyId() === 0 ? 'تومان' : 'دلار' }}</p>
                         <p class="dark:text-white text-dark text-sm md:text-xs lg:text-sm font-normal leading-[180%]">{{ currentMinPrice() }}</p>
                     </div>
@@ -63,9 +63,9 @@
                     </div>
                 </div>
             </div>
-            <div class="flex p-0 justify-between xs:justify-start mb-4 xs:mb-0 xs:p-2 xs:rounded-lg gap-0 xs:gap-4 xs:border xs:border-light-text4 xs:dark:border-dark-text4 my-2 w-full xs:w-auto">
-                <div (click)="onChartTypeChange(1)" class="flex hover:cursor-pointer justify-center items-center py-2.5 xs:py-0 flex-1/2 gap-2 xs:gap-0 xs:flex-auto xs:border-b-0 border-b {{ currentChartType() === 1 ? 'border-b-green-btn border-b-2 text-green-btn' : 'border-b-dark-text4 border-b text-dark-text4' }} ">
-                    <p class="block xs:hidden text-sm font-normal duration-300 ease-in-out leading-[180%]">نمودار کندلی</p>
+            <div class="flex p-0 justify-between md:justify-start mb-4 md:mb-0 md:p-2 md:rounded-lg gap-0 md:gap-4 md:border md:border-light-text4 md:dark:border-dark-text4 my-2 w-full md:w-auto">
+                <div (click)="onChartTypeChange(1)" class="flex hover:cursor-pointer justify-center items-center py-2.5 md:py-0 flex-1/2 gap-2 md:gap-0 md:flex-auto md:border-b-0 border-b {{ currentChartType() === 1 ? 'border-b-green-btn border-b-2 text-green-btn' : 'border-b-dark-text4 border-b text-dark-text4' }} ">
+                    <p class="block md:hidden text-sm font-normal duration-300 ease-in-out leading-[180%]">نمودار خطی</p>
                     <svg
                         xmlns="http://www.w3.org/2000/svg"
                         viewBox="0 0 24 24"
@@ -88,8 +88,8 @@
                     </svg>
                 </div>
 
-                <div (click)="onChartTypeChange(0)" class="flex hover:cursor-pointer justify-center items-center py-2.5 xs:py-0 flex-1/2 gap-2 xs:gap-0 xs:flex-auto xs:border-b-0 {{ currentChartType() === 0 ? 'border-b-green-btn border-b-2 text-green-btn' : 'border-b-dark-text4 border-b text-dark-text4' }}">
-                    <p class="block xs:hidden text-sm duration-300 ease-in-out leading-[180%]">نمودار کندلی</p>
+                <div (click)="onChartTypeChange(0)" class="flex hover:cursor-pointer justify-center items-center py-2.5 md:py-0 flex-1/2 gap-2 md:gap-0 md:flex-auto md:border-b-0 {{ currentChartType() === 0 ? 'border-b-green-btn border-b-2 text-green-btn' : 'border-b-dark-text4 border-b text-dark-text4' }}">
+                    <p class="block md:hidden text-sm duration-300 ease-in-out leading-[180%]">نمودار کندلی</p>
                     <svg
                         xmlns="http://www.w3.org/2000/svg"
                         viewBox="0 0 24 24"
@@ -106,9 +106,11 @@
                 </div>
             </div>
         </div>
+
+        <app-chart class="w-full" [historyData]="historyData" />
     </div>
 
-    <div class="w-full md:w-[27%] flex flex-col flex-nowrap justify-start items-end content-center">
+    <div class="w-full lg:w-[27%] flex flex-col flex-nowrap justify-start items-end content-center">
         <app-currency-overview class="w-full" [currentSelected]="currencyItem" (currentUnit)="onCurrencyUnitChange($event)" [relatedItems]="currentCategoryItems" />
     </div>
 </main>
