--- a/src/app/components/not-shared/currency-item-details/chart/chart.component.html
+++ b/src/app/components/not-shared/currency-item-details/chart/chart.component.html
@@ -1,4 +1,4 @@
-<div class="relative w-full h-full bg-chart-bg rounded-lg overflow-hidden shadow-2xl font-sans border border-[#2a2e39]">
+<div class="relative w-full h-full bg-chart-bg rounded-lg overflow-hidden shadow-2xl font-sans border border-[#2a2e39] mb-6 lg:mb-10">
 
     <div class="absolute inset-0 flex items-center justify-center pointer-events-none z-0">
       <span class="text-[80px] font-bold text-white opacity-[0.03] select-none tracking-tighter">
@@ -46,8 +46,6 @@
       </div>
     </div>
   
-    @if (historyData) {
-        <div #chartContainer class="relative z-10 w-full h-[400px]"></div>
-    }
+    <div #chartContainer class="relative z-10 w-full h-[400px]"></div>
    
 </div>
