--- a/src/styles.css
+++ b/src/styles.css
@@ -181,6 +181,10 @@
     @apply cursor-pointer rounded-lg flex items-center justify-center min-w-1/4 px-3 lg:w-1/2 lg:px-0 xl:px-2 py-2 text-xs font-medium border border-light-text4 dark:border-dark-text4 
 }
 
+@utility table-item-base {
+    @apply font-normal w-1/3 text-xs text-center leading-[180%]
+}
+
 
 .scroll-snap-x {
     scroll-snap-type: x mandatory;
