Changes table percent formula changed

--- a/src/app/components/not-shared/currency-item-details/changes-table/changes-table.component.html
+++ b/src/app/components/not-shared/currency-item-details/changes-table/changes-table.component.html
@@ -30,7 +30,7 @@
                 </tr>
                 @for (range of ranges(); track range.days) {
                     <tr class="w-full flex flex-1 border-b py-1 border-b-light-border2 dark:border-b-dark-border2">
-                        <td class="table-item-base {{(range?.direction === 'low') ? 'text-light-red-text dark:text-dark-red-text' : 'text-light-green-text dark:text-dark-green-text'}}">{{ (range?.direction === 'low') ? '-' : '+' }}{{ range.percent }}</td>
+                        <td class="table-item-base {{(range?.direction === 'low') ? 'text-light-red-text dark:text-dark-red-text' : 'text-light-green-text dark:text-dark-green-text'}}">{{ (range?.direction === 'low') ? '-' : '+' }}{{ range.percent }}%</td>
                         <td class="table-item-base dark:text-light-text4 text-dark-text4">{{ range.avg }}</td>
                         <td class="table-item-base dark:text-white text-dark rtl">{{ range.days }} روز</td>
                     </tr>
