--- a/src/app/components/not-shared/currency-item-details/chart/chart.component.html
+++ b/src/app/components/not-shared/currency-item-details/chart/chart.component.html
@@ -1,12 +1,12 @@
 <div class="relative w-full h-full bg-chart-bg rounded-lg overflow-hidden shadow-2xl font-sans border border-[#2a2e39] mb-6 lg:mb-10">
 
-    <div class="absolute inset-0 flex items-center justify-center pointer-events-none z-0">
+    <div class="absolute inset-0 flex items-center justify-center pointer-events-none">
       <span class="text-[80px] font-bold text-white opacity-[0.03] select-none tracking-tighter">
         Bitpin
       </span>
     </div>
   
-    <div class="relative z-20 flex flex-wrap items-center justify-between px-4 py-3 border-b border-[#2a2e39]">
+    <div class="relative flex flex-wrap items-center justify-between px-4 py-3 border-b border-[#2a2e39]">
      
       <div class="flex items-center gap-4">
         <h2 class="text-lg font-bold text-text-primary tracking-wide">
@@ -46,6 +46,6 @@
       </div>
     </div>
   
-    <div #chartContainer class="relative z-10 w-full h-[400px]"></div>
+    <div #chartContainer class="relative w-full h-[400px] font-iranyekan bg-light-hover dark:bg-dark-hover text-light-text4 dark:text-dark-text4"></div>
    
 </div>
