Home page 24h sorting fixed

--- a/src/app/components/not-shared/currency-item-details/chart/chart.component.html
+++ b/src/app/components/not-shared/currency-item-details/chart/chart.component.html
@@ -1,4 +1,4 @@
-<div class="relative w-full h-full bg-chart-bg rounded-lg overflow-hidden shadow-2xl font-sans border border-[#2a2e39] mb-6 lg:mb-10">
+<div class="relative w-full h-full bg-light2 dark:bg-dark2 rounded-lg overflow-hidden font-sans mb-6 lg:mb-10">
 
     <div class="absolute inset-0 flex items-center justify-center pointer-events-none">
       <span class="text-[80px] font-bold text-white opacity-[0.03] select-none tracking-tighter">
@@ -46,6 +46,6 @@
       </div>
     </div>
   
-    <div #chartContainer class="relative w-full h-[400px] font-iranyekan bg-light-hover dark:bg-dark-hover text-light-text4 dark:text-dark-text4"></div>
+    <div #chartContainer class="relative w-full h-63 md:h-82 font-iranyekan bg-light2 dark:bg-dark2 text-light-text4 dark:text-dark-text4"></div>
    
 </div>
