--- a/src/app/pages/currency-item-details/currency-item-details.component.html
+++ b/src/app/pages/currency-item-details/currency-item-details.component.html
@@ -64,7 +64,7 @@
                 </div>
             </div>
             <div class="flex p-0 justify-between md:justify-start mb-4 md:mb-0 md:p-2 md:rounded-lg gap-0 md:gap-4 md:border md:border-light-text4 md:dark:border-dark-text4 my-2 w-full md:w-auto">
-                <div (click)="onChartTypeChange(1)" class="flex hover:cursor-pointer justify-center items-center py-2.5 md:py-0 flex-1/2 gap-2 md:gap-0 md:flex-auto md:border-b-0 border-b {{ currentChartType() === 1 ? 'border-b-green-btn border-b-2 text-green-btn' : 'border-b-dark-text4 border-b text-dark-text4' }} ">
+                <div (click)="onChartTypeChange(1)" class="flex hover:cursor-pointer justify-center items-center py-2.5 md:py-0 flex-1/2 gap-2 md:gap-0 md:flex-auto md:border-b-0 border-b {{ currentChartType() === 1 ? 'border-b-green-btn text-green-btn' : 'border-b-dark-text4 text-dark-text4' }} ">
                     <p class="block md:hidden text-sm font-normal duration-300 ease-in-out leading-[180%]">نمودار خطی</p>
                     <svg
                         xmlns="http://www.w3.org/2000/svg"
@@ -88,7 +88,7 @@
                     </svg>
                 </div>
 
-                <div (click)="onChartTypeChange(0)" class="flex hover:cursor-pointer justify-center items-center py-2.5 md:py-0 flex-1/2 gap-2 md:gap-0 md:flex-auto md:border-b-0 {{ currentChartType() === 0 ? 'border-b-green-btn border-b-2 text-green-btn' : 'border-b-dark-text4 border-b text-dark-text4' }}">
+                <div (click)="onChartTypeChange(0)" class="flex hover:cursor-pointer justify-center items-center py-2.5 md:py-0 flex-1/2 gap-2 md:gap-0 md:flex-auto md:border-b-0 border-b {{ currentChartType() === 0 ? 'border-b-green-btn text-green-btn' : 'border-b-dark-text4 text-dark-text4' }}">
                     <p class="block md:hidden text-sm duration-300 ease-in-out leading-[180%]">نمودار کندلی</p>
                     <svg
                         xmlns="http://www.w3.org/2000/svg"
@@ -107,7 +107,7 @@
             </div>
         </div>
 
-        <app-chart class="w-full" [historyData]="historyData" />
+        <app-chart class="w-full" [historyData]="historyData" [chartType]="currentChartType()" />
         <app-changes-table class="w-full" [historyData]="historyData" [item]="currencyItem" [currentUnit]="currentSupportCurrencyId()" />
     </div>
 
